# writer-reader

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  book_reader.py  config.py  install.sh  mypy.ini  pyproject.toml  version.py
book/: SUMMARY.md
book/src/: chapter-01.md  chapter-02.md  chapter-03.md  chapter-04-features.md  introduction.md
mdbook/: cli.py
mdbook/domain/: __init__.py  content.py
mdbook/infrastructure/: container.py
mdbook/mcp/: server.py
mdbook/services/: __init__.py  content_service.py  git_service.py  index_service.py  render_service.py  toc_service.py  writer_service.py
src/writer_reader/: cli.py  toc.py
tests/: test_content_features.py  test_editing.py  test_toc.py
